@@ -8,6 +8,11 @@ Device::Device(const QString &d)
   tries = 10;
 }
 
+Device::~Device()
+{
+  cvReleaseCapture(&cap);
+}
+
 void Device::setDevice(const QString &d)
 {
   device = d;
@@ -18,17 +23,19 @@ int Device::open()
   // V4L2
   fd = v4l2_open(device.toUtf8().data() , O_RDWR, 0);
 
-  if(fd < 0) {
-    fprintf(stderr, "No se pudo abrir el dispositivo %s: %s\n", device.toUtf8().data(), strerror(errno));
+  if(fd < 0){
+    fprintf(stderr, "No se pudo abrir el dispositivo %s: %s\n", 
+            device.toUtf8().data(), strerror(errno));
     return EXIT_FAILURE;
   }
 
   getParams();
 
   // OpenCV
-  cap = cvCaptureFromCAM( device.right(1).toInt() );
-  if( !cap ) {
-    fprintf(stderr,"No se pudo conectar con el dispositivo /dev/video%d\n", device.right(1).toInt());
+  cap = cvCreateCameraCapture(device.right(1).toInt());
+  if(!cap){
+    fprintf(stderr, "No se pudo conectar con el dispositivo /dev/video%d\n", 
+            device.right(1).toInt());
     return EXIT_FAILURE;
   }
 
@@ -48,31 +55,31 @@ void Device::resetROI()
 
 int Device::capture(const QString &file, int thumbWidth, int thumbHeight)
 {
-  // Variables
-  IplImage  *img = 0; // Imagen a capturar
+  IplImage *img = 0;
 
-  // Captura de imagen
-  for(int i=0; i<tries; i++)
-    img = cvQueryFrame( cap );
+  // Capturar imagen
+  for(int i=0; i<tries; i++){
+    img = cvQueryFrame(cap);
+  }
 
-  if(!img) {
-    fprintf(stderr,"No se pudo capturar la imagen\n");
+  if(!img){
+    fprintf(stderr, "No se pudo capturar la imagen\n");
     exit(EXIT_FAILURE);
   }
 
-  // Región de interés
+  // Definir región de interés
   if(roi)
     cvSetImageROI(img, roiRect);
 
   // Guardar imagen
-  //cout << dir.path().append(file).toUtf8().data() << endl;
-  if(!cvSaveImage(dir.path().append(file).toUtf8().data(), img)) {
-    fprintf(stderr,"No se pudo guardar la imagen\n");
+  if(!cvSaveImage(dir.path().append(file).toUtf8().data(), img)){
+    fprintf(stderr, "No se pudo guardar la imagen\n");
     exit(EXIT_FAILURE);
   }
 
-  // Crear miniatura
-  QString cmd = QString("convert %1%2 -resize %3x%4 %1/thumbs%2").arg(dir.path()).arg(file).arg(thumbWidth).arg(thumbHeight);
+  // Crear miniatura con convert(utilidad de ImageMagick)
+  QString cmd = QString("convert %1%2 -resize %3x%4 %1/thumbs%2").arg(
+                dir.path()).arg(file).arg(thumbWidth).arg(thumbHeight);
   int ret = system(cmd.toUtf8().data());
 
   return ret;
@@ -92,61 +99,64 @@ void Device::getParams()
 #ifdef V4L2_CTRL_FLAG_NEXT_CTRL
   // Intentar primero la API de control extendida
   ctrl.id = V4L2_CTRL_FLAG_NEXT_CTRL;
-  if(0 == v4l2_ioctl (fd, VIDIOC_QUERYCTRL, &ctrl)) {
-    do {
+  if(0 == v4l2_ioctl(fd, VIDIOC_QUERYCTRL, &ctrl)){
+    do{
       c.id = ctrl.id;
       ctrl.id |= V4L2_CTRL_FLAG_NEXT_CTRL;
-      if(ctrl.flags & V4L2_CTRL_FLAG_DISABLED) {
+      if(ctrl.flags & V4L2_CTRL_FLAG_DISABLED){
         continue;
       }
       if(ctrl.type != V4L2_CTRL_TYPE_INTEGER &&
           ctrl.type != V4L2_CTRL_TYPE_BOOLEAN &&
-          ctrl.type != V4L2_CTRL_TYPE_MENU) {
+          ctrl.type != V4L2_CTRL_TYPE_MENU){
         continue;
       }
-      if(v4l2_ioctl(fd, VIDIOC_G_CTRL, &c) == 0) {
+      if(v4l2_ioctl(fd, VIDIOC_G_CTRL, &c) == 0){
         params.insert(QString( (char*)ctrl.name ), c.id);
       }
-    } while(0 == v4l2_ioctl (fd, VIDIOC_QUERYCTRL, &ctrl));
-  } else
+    }
+    while(0 == v4l2_ioctl (fd, VIDIOC_QUERYCTRL, &ctrl));
+  }
+  else
 #endif
   {
-    // Comprobar todos los controles estándard
-    for(i=V4L2_CID_BASE; i<V4L2_CID_LASTP1; i++) {
+    // Comprobar todos los controles estándar
+    for(i=V4L2_CID_BASE; i<V4L2_CID_LASTP1; i++){
       ctrl.id = i;
-      if(v4l2_ioctl(fd, VIDIOC_QUERYCTRL, &ctrl) == 0) {
+      if(v4l2_ioctl(fd, VIDIOC_QUERYCTRL, &ctrl) == 0){
         if(ctrl.flags & V4L2_CTRL_FLAG_DISABLED) {
           continue;
         }
         if(ctrl.type != V4L2_CTRL_TYPE_INTEGER &&
             ctrl.type != V4L2_CTRL_TYPE_BOOLEAN &&
-            ctrl.type != V4L2_CTRL_TYPE_MENU) {
+            ctrl.type != V4L2_CTRL_TYPE_MENU){
           continue;
         }
         c.id = i;
-        if(v4l2_ioctl(fd, VIDIOC_G_CTRL, &c) == 0) {
+        if(v4l2_ioctl(fd, VIDIOC_G_CTRL, &c) == 0){
           params.insert(QString( (char*)ctrl.name ), i);
         }
       }
     }
 
     // Comprobar los posibles controles personalizados
-    for(i=V4L2_CID_PRIVATE_BASE; ; i++) {
+    for(i=V4L2_CID_PRIVATE_BASE; ; i++){
       ctrl.id = i;
-      if(v4l2_ioctl(fd, VIDIOC_QUERYCTRL, &ctrl) == 0) {
-        if(ctrl.flags & V4L2_CTRL_FLAG_DISABLED) {
+      if(v4l2_ioctl(fd, VIDIOC_QUERYCTRL, &ctrl) == 0){
+        if(ctrl.flags & V4L2_CTRL_FLAG_DISABLED){
           continue;
         }
         if(ctrl.type != V4L2_CTRL_TYPE_INTEGER &&
             ctrl.type != V4L2_CTRL_TYPE_BOOLEAN &&
-            ctrl.type != V4L2_CTRL_TYPE_MENU) {
+            ctrl.type != V4L2_CTRL_TYPE_MENU){
           continue;
         }
         c.id = i;
-        if(v4l2_ioctl(fd, VIDIOC_G_CTRL, &c) == 0) {
+        if(v4l2_ioctl(fd, VIDIOC_G_CTRL, &c) == 0){
           params.insert(QString( (char*)ctrl.name ), i);
         }
-      } else {
+      }
+      else{
         break;
       }
     }
@@ -156,7 +166,7 @@ void Device::getParams()
 void Device::listParams()
 {
   QMapIterator<QString, int> it(params);
-  while (it.hasNext()) {
+  while(it.hasNext()){
     it.next();
     cout << it.key().toUtf8().data() << ": " << it.value() << endl;
   }
@@ -172,17 +182,17 @@ int Device::setParam(const QString &name, int value)
 
   ctrl.id = params.value(name);
 
-  //cout << " > setParam(" << name.toUtf8().data() << ", " << value << ")" << endl;
-
-  if(v4l2_ioctl(fd, VIDIOC_QUERYCTRL, &ctrl) == 0) {
+  if(v4l2_ioctl(fd, VIDIOC_QUERYCTRL, &ctrl) == 0){
     c.id = params.value(name);
     c.value = value;
-    if(v4l2_ioctl(fd, VIDIOC_S_CTRL, &c) != 0) {
-      fprintf(stderr, "Error al establecer el control \"%s\": %s\n", name.toUtf8().data(), strerror(errno));
+    if(v4l2_ioctl(fd, VIDIOC_S_CTRL, &c) != 0){
+      fprintf(stderr, "Error al establecer el control \"%s\": %s\n", 
+              name.toUtf8().data(), strerror(errno));
     }
   }
-  else {
-    fprintf(stderr, "Error al obtener el control %s: %s\n", name.toUtf8().data(), strerror(errno));
+  else{
+    fprintf(stderr, "Error al obtener el control %s: %s\n", 
+            name.toUtf8().data(), strerror(errno));
     return EXIT_FAILURE;
   }
 
@@ -203,5 +213,4 @@ void Device::setTries(int t)
 {
   tries = t;
 }
-
 
